# nhl-betting-model

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: calibration-check.md  efficiency-review.md  leakage-check.md  new-adr.md  start.md  wrap.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml.example
dbt/analyses/: README.md
dbt/macros/: README.md
dbt/models/core/: README.md  dim_player.sql  dim_team.sql  fct_game.sql  fct_game_event.sql  fct_game_lineup.sql  fct_game_outcome.sql  schema.yml
dbt/models/marts/: README.md
dbt/models/staging/: README.md
dbt/models/staging/nhl/: schema.yml  stg_nhl__boxscore.sql  stg_nhl__club_schedule_season.sql  stg_nhl__goalie_summary.sql  stg_nhl__landing.sql  stg_nhl__play_by_play.sql  stg_nhl__roster.sql  stg_nhl__skater_summary.sql  stg_nhl__team_summary.sql
dbt/seeds/: README.md  dim_league.csv  dim_sport.csv  schema.yml
dbt/snapshots/: README.md
dbt/tests/: README.md
docs/: data-sources.md  development.md  efficiency.md  glossary.md  gotchas.md  now.md  roadmap.md  working-with-claude.md
docs/architecture/: data-warehouse.md
docs/costs/: README.md  expenses.csv
docs/decisions/: 0001-warehouse-stack.md  0002-development-environment.md  0003-nhl-api-surface-and-bronze-shape.md  README.md
docs/ideas/: README.md  efficiency-scaffolding-followups.md  gitleaks-local-hook.md  multi-model-ensemble.md  other-sports-expansion.md  pra-spike-notes.md  prd-pbp-keys.md  prf-stats-rest-spike-notes.md  prf2-open-questions.md  prf2-spike-notes.md  prop-market-expansion.md  season-summaries-cadence-gating.md  sentiment-analysis.md  team-season-cadence-gating.md  transparency-page.md
docs/infrastructure/: motherduck.md  r2.md
docs/milestones/: m2-nhl-ingestion.md  m3-silver-layer.md
src/puckbunny/: __init__.py  config.py  logging_setup.py
src/puckbunny/http/: __init__.py  client.py
src/puckbunny/ingestion/: __init__.py  cost_check.py  manifest.py
src/puckbunny/ingestion/nhl/: __init__.py  __main__.py  backfill.py  cli.py  endpoints.py  games.py  play_by_play.py  schedule.py  schemas.py  season_summaries.py  team_season.py
src/puckbunny/storage/: __init__.py  base.py  local.py  parquet.py  r2.py
tests/: conftest.py  test_config.py  test_logging_setup.py
tests/http/: test_client.py
tests/ingestion/: test_backfill.py  test_backfill_resume.py  test_cost_check.py  test_manifest.py  test_nhl_endpoints.py  test_nhl_games.py  test_nhl_pbp.py  test_nhl_schemas.py  test_nhl_season_summaries.py  test_nhl_team_season.py  test_schedule.py  test_smoke_integration.py
tests/ingestion/fixtures/games/: README.md  boxscore_2025030123.json  landing_2025030123.json  play_by_play_2025030123.json
tests/ingestion/fixtures/schedule/: README.md  schedule_2026-04-24.json
tests/ingestion/fixtures/season_summaries/: README.md  goalie_summary_20242025.json  skater_summary_20242025.json  team_summary_20242025.json
tests/ingestion/fixtures/team_season/: README.md  club_schedule_season_TOR_20242025.json  roster_TOR_20242025.json  roster_UTA_20232024_404.html
tests/storage/: test_local.py  test_parquet.py  test_r2.py
tools/spike/: prf_stats_rest_probe.py
