[project]
name = "puckbunny"
version = "0.0.0"
description = "PuckBunny — predictive modeling and betting analytics. Phase 1 scope: NHL."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Jon Crenshaw" }]

# M2 PR-B introduces the first runtime dependencies. Keep this list lean —
# every addition is reviewed for cost and footprint per CLAUDE.md.
dependencies = [
  # HTTP transport + retries.
  "httpx>=0.27",
  "tenacity>=9.0",
  # Config + response validation.
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",       # explicit; pydantic-settings reads .env via this
  # Logging.
  "structlog>=24.1",
  # Storage primitives.
  "pyarrow>=17.0",
  "boto3>=1.34",
]

# Dev tooling lives in a PEP 735 dependency group, not as a project extra,
# so `uv sync` installs it by default without needing `--all-extras`.
[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  # dbt + warehouse adapter. ADR-0001.
  "dbt-core>=1.8",
  "dbt-duckdb>=1.8",
  # SQL lint. Matches the pre-commit hook and the CI sql job.
  "sqlfluff>=3.2",
  # M2 PR-B: VCR cassettes for HTTP-replay tests.
  "pytest-recording>=0.13",
  # M2 PR-B: stubs for boto3 so mypy --strict stays clean on storage/r2.py.
  "boto3-stubs[s3]>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Editable install of the `puckbunny` package from src/. Distribution name
# is also `puckbunny` (renamed from the placeholder `nhl-betting-model`
# in M2 PR-B to match the product name and the import path).
[tool.hatch.build.targets.wheel]
packages = ["src/puckbunny"]

# ---------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "dbt/target",
  "dbt/dbt_packages",
  "data",
  "local-cache",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length — ruff format already handles long lines
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]   # pytest fixtures often show as unused args

[tool.ruff.lint.flake8-type-checking]
# Pydantic resolves annotations at model-class-creation time (it calls
# ``typing.get_type_hints``), so types referenced from a ``BaseModel``
# field must be importable at runtime — they cannot live under
# ``TYPE_CHECKING``. Telling flake8-type-checking about the relevant
# base classes prevents false positives that would push e.g. ``date``
# or ``datetime`` into ``TYPE_CHECKING`` and break model construction.
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic_settings.BaseSettings",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Relax strictness on third-party code without type stubs.
[[tool.mypy.overrides]]
module = ["duckdb.*", "dagster.*", "dbt.*"]
ignore_missing_imports = true

# pyarrow's bundled type annotations are partial — ``pq.write_table`` /
# ``pq.read_table`` are untyped, which trips ``disallow_untyped_calls``
# in strict mode. We can't fix this by overriding pyarrow's checking
# settings (overrides apply to checking *of* a module, not to calls
# *into* it), so the two specific call sites carry per-line
# ``# type: ignore[no-untyped-call]``. Revisit if pyarrow ships full
# stubs or if we're willing to add ``pyarrow-stubs`` as a dev dep.

[tool.pytest.ini_options]
minversion = "8.0"
# ``--import-mode=importlib`` keeps pytest from inserting test subdirs
# (e.g. ``tests/http/``) onto ``sys.path`` during collection. Without
# this, ``tests/http/__init__.py`` ends up shadowing the stdlib ``http``
# package and breaks ``import http.client`` inside httpx / botocore.
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
testpaths = ["tests"]
markers = [
  "slow: tests that are slow (deselect with '-m \"not slow\"')",
  "integration: tests that hit external services or real databases",
]
